# mkdocs-publisher

./: pyproject.toml
