[project]
name = "mkdocs-publisher"
version = "1.4.7"
description = "Publisher for MkDocs - set of plugins for content creators"
authors = [{ name = "Maciej 'maQ' Kusz", email = "maciej.kusz@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
license = "MIT"
keywords = [
    "mkdocs",
    "mkdocs-plugin",
    "blog",
    "categories",
    "debugger",
    "docs",
    "documentation",
    "frontmatter",
    "markdown",
    "minifier",
    "navigation",
    "obsidian",
    "publisher",
    "tags",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Text Editors :: Documentation",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "mkdocs~=1.6",
    "pymdown-extensions~=10.7",
    "beautifulsoup4~=4.13",
    "mkdocs-material~=9.6",
]

[project.urls]
Homepage = "https://mkdocs-publisher.github.io/"
Repository = "https://github.com/mkdocs-publisher/mkdocs-publisher"
Documentation = "https://mkdocs-publisher.github.io/"
"Bug Tracker" = "https://github.com/mkdocs-publisher/mkdocs-publisher/issues"

[project.scripts]
mkdocs-pub = "mkdocs_publisher._cli.publisher:app"

[project.entry-points."mkdocs.plugins"]
pub-blog = "mkdocs_publisher.blog.plugin:BlogPlugin"
pub-debugger = "mkdocs_publisher.debugger.plugin:DebuggerPlugin"
pub-meta = "mkdocs_publisher.meta.plugin:MetaPlugin"
pub-minifier = "mkdocs_publisher.minifier.plugin:MinifierPlugin"
pub-obsidian = "mkdocs_publisher.obsidian.plugin:ObsidianPlugin"
pub-social = "mkdocs_publisher.social.plugin:SocialPlugin"

[dependency-groups]
dev = [
    "yamllint>=1.37.0,<2",
    "ruff>=0.5.7,<0.6",
    "pyright>=1.1.398,<2",
]
test = [
    "coverage>=7.6.4,<8",
    "pytest>=7.4.4,<8",
    "pytest-cov>=4.1.0,<5",
    "pytest-check>=2.5.2,<3",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[tool.hatch.build.targets.sdist]
include = ["mkdocs_publisher"]

[tool.hatch.build.targets.wheel]
include = ["mkdocs_publisher"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
extraPaths = [
    "mkdocs_publisher",
]
include = [
    "mkdocs_publisher",
    "tests",
]
exclude = [
    "docs",
    "mkdocs_publisher_docs",
]
reportMissingImports = false
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "--tb=short --log-level=DEBUG --cov-report=html --cov-report=json --cov=mkdocs_publisher"
markers = [
    "deprecated: Tests no longer used",
    ]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "SIM"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true

[tool.coverage.report]
include_namespace_packages = true
skip_empty = true
skip_covered = true

[tool.coverage.json]
pretty_print = true
